--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             подскажем и подготовим проект и смету</p>
                         <label for="phone_3">Ваш телефон для получения скидки</label>
                         <input class="phone-user" type="text" id="phone_3" name="user_phone"
-                            placeholder="+7(___)___-__-__" required>
+                            placeholder="+7 (___) ___-__-__" required>
                         <button class="button main-form-btn" name="submit" type="submit">Получить консультацию</button>
                         <p class="small">Заполнения заявки Вас ни к чему не обязывает! <br> Вы сможете отказаться в
                             любой
@@ -115,7 +115,7 @@
                         <input type="text" id="name_2" name="user_name" placeholder="Ваше имя" required>
                         <label for="phone_2">Ваш телефон для получения скидки</label>
                         <input class="phone-user" type="text" id="phone_2" name="user_phone"
-                            placeholder="+7(___)___-__-__" required>
+                            placeholder="+7 (___) ___-__-__" required>
                         <button class="button capture-form-btn" name="submit" type="submit">Получить расчет и скидку
                         </button>
                         <p class="small">Вы получите расчет стоимости с учетом выбора <br>подходящего объема септика.
@@ -261,7 +261,7 @@
                             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel"
                                 aria-labelledby="headingFour">
                                 <div class="panel-body">
-                                    <p>Введите расстояние до дома</p>
+                                    <p>Введите расстояние до дома в метрах</p>
                                     <input type="text" class="distance">
                                     <button class="button btnFour construct-btn">Получить расчет и
                                         скидку</button>
@@ -356,7 +356,7 @@
 
     <section class="gauging">
         <div class="container">
-            <div class="row">
+            <div class="d-flex flex-xl-row flex-sm-column">
                 <div class="col-lg-5 col-md-5 col-sm-5">
                     <img class="gauging-img" src="img/gauging/magazine.png" alt="magazine">
                 </div>
@@ -504,7 +504,7 @@
                     <label for="name_1">Как к вам обращаться</label>
                     <input type="text" id="name_1" name="user_name" placeholder="Ваше имя" required>
                     <label for="phone_1">Ваш телефон для получения скидки</label>
-                    <input class="phone-user" type="tel" id="phone_1" name="user_phone" placeholder="+7(___)___-__-__"
+                    <input class="phone-user" type="tel" id="phone_1" name="user_phone" placeholder="+7 (___) ___-__-__"
                         required>
                     <button class="button capture-form-btn" name="submit" type="submit">Получить расчет и
                         скидку</button>
@@ -528,8 +528,8 @@
                     <label for="name_11">Как к вам обращаться</label>
                     <input type="text" id="name_11" name="user_name" placeholder="Ваше имя" required>
                     <label for="phone_11">Ваш телефон для получения скидки</label>
-                    <input class="phone-user" type="text" id="phone_11" name="user_phone" placeholder="+7(___)___-__-__"
-                        required>
+                    <input class="phone-user" type="text" id="phone_11" name="user_phone"
+                        placeholder="+7 (___) ___-__-__" required>
                     <button class="button capture-form-btn" name="submit" type="submit">Заказать со скидкой</button>
                     <p class="small">Вы получите расчет стоимости с учетом выбора <br>подходящего объема септика. типа
                         грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента дома и
@@ -550,8 +550,8 @@
                     <label for="name_12">Как к вам обращаться</label>
                     <input type="text" id="name_12" name="user_name" placeholder="Ваше имя" required>
                     <label for="phone_12">Ваш телефон для получения скидки</label>
-                    <input class="phone-user" type="text" id="phone_12" name="user_phone" placeholder="+7(___)___-__-__"
-                        required>
+                    <input class="phone-user" type="text" id="phone_12" name="user_phone"
+                        placeholder="+7 (___) ___-__-__" required>
                     <button class="button capture-form-btn" name="submit" type="submit">Получить чек-лист и
                         скидку</button>
                     <p class="small">Вы получите расчет стоимости с учетом выбора <br>подходящего объема септика. типа
@@ -573,8 +573,8 @@
                     <label for="name_13">Как к вам обращаться</label>
                     <input type="text" id="name_13" name="user_name" placeholder="Ваше имя" required>
                     <label for="phone_13">Ваш телефон для получения скидки</label>
-                    <input class="phone-user" type="text" id="phone_13" name="user_phone" placeholder="+7(___)___-__-__"
-                        required>
+                    <input class="phone-user" type="text" id="phone_13" name="user_phone"
+                        placeholder="+7 (___) ___-__-__" required>
                     <button class="button capture-form-btn" name="submit" type="submit">Получить консультацию</button>
                     <p class="small">Вы получите расчет стоимости с учетом выбора <br>подходящего объема септика. типа
                         грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента дома и
@@ -596,8 +596,8 @@
                     <label for="name_14">Как к вам обращаться</label>
                     <input type="text" id="name_14" name="user_name" placeholder="Ваше имя" required>
                     <label for="phone_14">Ваш телефон для получения скидки</label>
-                    <input class="phone-user" type="text" id="phone_14" name="user_phone" placeholder="+7(___)___-__-__"
-                        required>
+                    <input class="phone-user" type="text" id="phone_14" name="user_phone"
+                        placeholder="+7 (___) ___-__-__" required>
                     <button class="button capture-form-btn discount-calc-btn" name="submit" type="submit">Заказать со
                         скидкой</button>
                     <p class="small">Вы получите расчет стоимости с учетом выбора <br>подходящего объема септика. типа
